--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@cyntler/react-doc-viewer",
-  "version": "1.16.6",
+  "name": "@yhmsi/react-doc-viewer",
+  "version": "1.0.1",
   "description": "File viewer for React.",
   "author": "Matthew Mogford / Damian Cyntler",
   "type": "module",
@@ -13,19 +13,19 @@
   "license": "Apache License 2.0",
   "homepage": "https://cyntler.github.io/react-doc-viewer",
   "repository": {
-    "url": "https://github.com/cyntler/react-doc-viewer"
+    "url": "https://github.com/undefined-unknown/react-doc-viewer"
   },
   "files": [
     "dist/**"
   ],
-  "types": "./dist/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "main": "./dist/react-doc-viewer.cjs",
   "module": "./dist/react-doc-viewer.js",
   "exports": {
     ".": {
       "import": "./dist/react-doc-viewer.js",
       "require": "./dist/react-doc-viewer.cjs",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/src/index.d.ts"
     },
     "./dist/index.css": {
       "import": "./dist/index.css",
@@ -53,7 +53,8 @@
     "core-js": "^3.37.1",
     "mustache": "^4.2.0",
     "papaparse": "^5.4.1",
-    "react-pdf": "^9.0.0",
+    "pdfjs-dist": "^4.5.136",
+    "react-pdf": "9.0.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
